# roused

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: design.md  mvp-plan.md
packaging/launchd/: roused-gateway.plist  roused-target.plist
src/: config.rs  lib.rs  lifecycle.rs  main.rs  plain_http.rs  proxy.rs  setup.rs  wake.rs
tests/: cli_setup.rs  milestone1_proxy.rs  milestone2_wake.rs  milestone3_sleep.rs
tests/support/: mod.rs
